[package]
name = "aria2-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.21" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
strum = { version = "0.26", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
